spclient - why it no work :(